--- a/res/layout/incoming_messages_other.xml
+++ b/res/layout/incoming_messages_other.xml
@@ -2,19 +2,38 @@
 <com.juick.android.PressableLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     >
+    <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            >
+        <TextView
+            android:id="@+id/from"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="someone@jabber.ru"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:id="@+id/preview"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Morraz will prevail!"
+            />
+    </LinearLayout>
     <TextView
-        android:id="@+id/from"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="someone@jabber.ru"
-        android:textStyle="bold"
-        />
-    <TextView
-        android:id="@+id/preview"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Morraz will prevail!"
-        />
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="23sp"
+            android:paddingRight="10sp"
+            android:paddingLeft="10sp"
+            android:background="#A0A0A0"
+            android:layout_marginRight="2sp"
+            android:layout_gravity="center_vertical"
+            android:text="X"
+            />
 </com.juick.android.PressableLinearLayout>
