--- a/res/layout/incoming_messages_threads.xml
+++ b/res/layout/incoming_messages_threads.xml
@@ -2,29 +2,48 @@
 <com.juick.android.PressableLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     >
+    <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            >
+        <TextView
+            android:id="@+id/from_tags"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="#12345 someone *tag1 *tag2"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:id="@+id/preview"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:textColor="#808080"
+            android:text="> Morraz will prevail! forever and ever and ever and ever and ever and ever and ever and ever"
+            />
+        <TextView
+            android:id="@+id/comment_counts"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:text="4 new comments from @zorro, @morro"
+            />
+    </LinearLayout>
     <TextView
-        android:id="@+id/from_tags"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="#12345 someone *tag1 *tag2"
-        android:textStyle="bold"
-        />
-    <TextView
-        android:id="@+id/preview"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:ellipsize="end"
-        android:textColor="#808080"
-        android:text="> Morraz will prevail! forever and ever and ever and ever and ever and ever and ever and ever"
-        />
-    <TextView
-        android:id="@+id/comment_counts"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:text="4 new comments from @zorro, @morro"
-        />
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="23sp"
+            android:paddingRight="10sp"
+            android:paddingLeft="10sp"
+            android:background="#A0A0A0"
+            android:layout_marginRight="2sp"
+            android:layout_gravity="center_vertical"
+            android:text="X"
+            />
 </com.juick.android.PressableLinearLayout>
