--- a/res/menu/xmpp_messages.xml
+++ b/res/menu/xmpp_messages.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/editable_list"
-        android:icon="@drawable/ic_action_edit"
-        android:title="@string/MessagesDeleteMode"
-        android:showAsAction="never"/>
-    <item android:id="@+id/listen_all"
-        android:title="Listen All"
-        android:showAsAction="never"/>
-    <item android:id="@+id/unlisten_all"
-        android:title="Stop Listen All"
-        android:showAsAction="never"/>
-    <item android:id="@+id/menuitem_preferences"
-        android:icon="@android:drawable/ic_menu_preferences"
-        android:title="@string/Settings"
-        android:showAsAction="never"/>
+    <item
+            android:id="@+id/editable_list"
+            android:icon="@drawable/ic_action_edit"
+            android:title="@string/MessagesDeleteMode"
+            android:showAsAction="never"/>
+    <item
+            android:id="@+id/listen_all"
+            android:icon="@drawable/mm_watch"
+            android:title="Watch All"
+            android:showAsAction="never"/>
+    <item
+            android:id="@+id/unlisten_all"
+            android:icon="@drawable/mm_unwatch"
+            android:title="Stop Watch All"
+            android:showAsAction="never"/>
+    <item
+            android:id="@+id/menuitem_preferences"
+            android:icon="@android:drawable/ic_menu_preferences"
+            android:title="@string/Settings"
+            android:showAsAction="never"/>
 </menu>
