--- a/res/layout/messages.xml
+++ b/res/layout/messages.xml
@@ -1,5 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/messagesfragment"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+        >
+    <TextView
+            android:id="@+id/old_title"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#b6813d"
+            android:text="@string/Juick"
+            android:background="#cfcea0"
+            android:textSize="20sp"
+            android:padding="3sp"
+            />
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                 android:id="@+id/messagesfragment"
+                 android:layout_width="fill_parent"
+                 android:layout_below="@id/old_title"
+                 android:layout_height="fill_parent"/>
+</RelativeLayout>
