--- a/res/layout/thread.xml
+++ b/res/layout/thread.xml
@@ -10,7 +10,8 @@
             android:textColor="#b6813d"
             android:text="@string/Juick"
             android:background="#cfcea0"
-            android:textSize="20sp"
+            android:singleLine="true"
+            android:textSize="18sp"
             android:padding="3sp"
             />
     <Button
