--- a/res/layout/xmpp_control.xml
+++ b/res/layout/xmpp_control.xml
@@ -5,14 +5,21 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         >
-    <TextView
-        android:id="@+id/logview"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:singleLine="false"
-        android:maxHeight="180sp"
-        android:scrollbars="vertical"
-        android:layout_alignParentTop="true"></TextView>
+    <ScrollView
+            android:id="@+id/logview_scroll"
+            android:layout_width="fill_parent"
+            android:layout_height="180sp"
+            android:layout_alignParentTop="true"
+            >
+        <TextView
+                android:id="@+id/logview"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:singleLine="false"
+                android:text="Morraz"
+                android:scrollbars="vertical"
+                ></TextView>
+    </ScrollView>
     <LinearLayout
             android:id="@+id/buttons"
             android:layout_width="fill_parent"
@@ -59,7 +66,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_above="@id/buttons2"
-            android:layout_below="@id/logview"
+            android:layout_below="@id/logview_scroll"
             >
         <TableLayout
                 android:layout_width="fill_parent"
