--- a/res/xml/prefs_content.xml
+++ b/res/xml/prefs_content.xml
@@ -59,6 +59,12 @@
                 android:persistent="true"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="Other">
+        <CheckBoxPreference
+                android:key="filterNonRussian"
+                android:title="@string/FilterNonRussianMessages"
+                android:summary="@string/FilterNonRussianMessages2"
+                android:defaultValue="false"
+                android:persistent="true"/>
         <Preference android:title="@string/Filters">
             <intent android:targetPackage="com.juickadvanced" android:targetClass="com.juick.android.EditFiltersActivity"/>
         </Preference>
