--- a/res/layout/incoming_messages_threads.xml
+++ b/res/layout/incoming_messages_threads.xml
@@ -37,12 +37,14 @@
     <TextView
             android:id="@+id/delete"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
+            android:gravity="center_vertical"
             android:textSize="23sp"
             android:paddingRight="10sp"
             android:paddingLeft="10sp"
-            android:background="#A0A0A0"
-            android:layout_marginRight="2sp"
+            android:background="#FFA0A0A0"
+            android:textColor="#FFFFFFFF"
+            android:layout_marginRight="0sp"
             android:layout_gravity="center_vertical"
             android:text="X"
             />
