--- a/res/xml/prefs_xmpp.xml
+++ b/res/xml/prefs_xmpp.xml
@@ -43,6 +43,18 @@
         </Preference>
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/Notifications">
+        <CheckBoxPreference
+                android:key="receive_only_personal"
+                android:title="@string/ReceiveOnlyPersonal"
+                android:summary="@string/WillReceiveOnlyPersonal"
+                android:defaultValue="false"
+                android:persistent="true"/>
+        <CheckBoxPreference
+                android:key="notify_only_personal"
+                android:title="@string/NotifyOnlyPersonal"
+                android:summary="@string/WillNotifyOnlyPersonal"
+                android:defaultValue="false"
+                android:persistent="true"/>
         <RingtonePreference
                 android:key="ringtone_uri"
                 android:defaultValue=""
