--- a/res/xml/prefs_ui.xml
+++ b/res/xml/prefs_ui.xml
@@ -37,6 +37,13 @@
                 android:persistent="true"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/Colors">
+        <ListPreference
+                android:key="nativeTheme"
+                android:title="Theme for UI elemnents"
+                android:entries="@array/themes"
+                android:entryValues="@array/themes"
+                android:defaultValue="SherlockLight"
+                android:persistent="true"/>
         <yuku.ambilwarna.widget.AmbilWarnaPreference
             android:key="Colors.COMMON_BACKGROUND"
             android:title="@string/CommonBackground"
