--- a/res/layout/fragment_view.xml
+++ b/res/layout/fragment_view.xml
@@ -8,8 +8,9 @@
 
     <LinearLayout android:id="@id/android:empty"
                   android:layout_width="fill_parent"
-                  android:layout_height="wrap_content"
+                  android:layout_height="fill_parent"
                   android:orientation="vertical"
+                  android:background="#ffffff"
             >
         <LinearLayout
                 android:layout_width="fill_parent"
