--- a/res/layout/image_holder.xml
+++ b/res/layout/image_holder.xml
@@ -10,8 +10,14 @@
             android:layout_width="180sp"
             android:orientation="vertical"
             android:layout_height="100sp">
-        <com.juick.android.MyWebView
-                android:id="@+id/webview"
+        <!--<com.juick.android.MyWebView-->
+                <!--android:id="@+id/webview"-->
+                <!--android:layout_width="fill_parent"-->
+                <!--android:layout_height="fill_parent"-->
+                <!--android:visibility="gone"-->
+                <!--/>-->
+        <ImageView
+                android:id="@+id/non_webview"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:visibility="gone"
