--- a/res/xml/prefs_ui.xml
+++ b/res/xml/prefs_ui.xml
@@ -7,6 +7,19 @@
             android:entryValues="@array/scaleFontSize"
             android:defaultValue="1.0"
             android:persistent="true"/>
+    <PreferenceCategory android:title="Full Screen">
+        <CheckBoxPreference
+                android:key="fullScreenMessages"
+                android:title="In Messages view"
+                android:defaultValue="false"
+                android:persistent="true"/>
+        <CheckBoxPreference
+                android:key="fullScreenThread"
+                android:title="In Thread view"
+                android:summary="..instead of legacy menu"
+                android:defaultValue="false"
+                android:persistent="true"/>
+    </PreferenceCategory>
     <PreferenceCategory android:title="Message Menu Mode">
         <CheckBoxPreference
                 android:key="dialogMessageMenu"
