--- a/res/layout/fragment_view.xml
+++ b/res/layout/fragment_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-         android:orientation="vertical"
+ <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >
@@ -61,7 +60,7 @@
             android:layout_height="fill_parent"
             android:id="@+id/list_container"
             >
-        <ListView android:id="@id/android:list"
+        <com.juick.android.MyListView android:id="@id/android:list"
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:visibility="gone"
@@ -69,4 +68,15 @@
                   android:drawSelectorOnTop="false"/>
     </LinearLayout>
 
- </LinearLayout>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/imagepreview_container"
+            android:visibility="gone"
+            >
+        <include layout="@layout/image_preview"
+                />
+    </LinearLayout>
+
+ </RelativeLayout>
