--- a/res/layout/image_holder.xml
+++ b/res/layout/image_holder.xml
@@ -5,38 +5,35 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
 
-    <LinearLayout
+    <RelativeLayout
             android:id="@+id/content"
             android:layout_width="180sp"
             android:orientation="vertical"
             android:layout_height="100sp">
-        <!--<com.juick.android.MyWebView-->
-                <!--android:id="@+id/webview"-->
-                <!--android:layout_width="fill_parent"-->
-                <!--android:layout_height="fill_parent"-->
-                <!--android:visibility="gone"-->
-                <!--/>-->
-        <ImageView
-                android:id="@+id/non_webview"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:visibility="gone"
-                />
         <TextView
                 android:id="@+id/progressbar_text"
                 android:layout_width="180sp"
                 android:singleLine="true"
+                android:layout_alignParentTop="true"
                 android:layout_height="wrap_content"
                 >
         </TextView>
         <ProgressBar
                 android:id="@+id/progressbar"
                 android:layout_width="30sp"
+                android:layout_below="@id/progressbar_text"
                 android:layout_height="30sp"
                 >
         </ProgressBar>
+        <com.juick.android.MyImageView
+                android:id="@+id/non_webview"
+                android:layout_alignParentTop="true"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:visibility="invisible"
+                />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </LinearLayout>
