--- a/res/xml/prefs_behavior.xml
+++ b/res/xml/prefs_behavior.xml
@@ -62,6 +62,11 @@
 
     <PreferenceCategory android:title="Debug/Tuning">
         <CheckBoxPreference
+            android:key="alternativeLongClick"
+            android:title="Alternative long click"
+            android:defaultValue="false"
+            android:persistent="true"/>
+        <CheckBoxPreference
             android:key="dontWatchPreferences"
             android:title="Ignore prefs change in main"
             android:defaultValue="false"
